Work out Login and Logout Change Validation rule of User Fix Layout bug

--- a/trunk/app/webroot/css/admin.css
+++ b/trunk/app/webroot/css/admin.css
@@ -169,3 +169,6 @@ dd{
 	width:830px;
 	margin-left:220px;
 }
+.adminLogin{
+	margin-right: -425px;
+}
