--- a/trunk/app/webroot/css/index.css
+++ b/trunk/app/webroot/css/index.css
@@ -397,3 +397,27 @@ a:hover, a:active, a:focus { /* 此组选择器将为键盘导航者提供与鼠
 .footerRow a:hover{
 	text-decoration:underline;
 }
+.afterLogIn{
+margin-top: -40px;
+}
+form .submit input[type="submit"] {
+	background:#F90;
+	background:-webkit-gradient( linear, left bottom, left top, color-stop(0.44, rgb(255,119,0)), color-stop(0.72, rgb(255,153,0)) );
+	background: -moz-linear-gradient( center bottom, rgb(255,119,0) 44%, rgb(255,153,0) 72% );
+	color: white;
+	text-shadow: none;
+	border-color:#F90;
+	text-decoration:none;
+}
+form .submit input[type="submit"]:hover, table td.actions a:hover {
+	background:#ff6f00;
+	background:-webkit-gradient(  linear,  left bottom,  left top,  color-stop(0.44, rgb(255,68,0)),  color-stop(0.72, rgb(255,102,0)) );
+	background: -moz-linear-gradient(  center bottom,  rgb(255,68,0) 44%,  rgb(255,102,0) 72% );
+	color: white;
+	text-shadow: none;
+	border-color:#F90;
+	cursor:pointer;
+}
+input, textarea {
+font-family:arial;
+}
